[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cgstream"
version = "0.0.1"
authors = [
	{ name="Tino Didriksen", email="mail@tinodidriksen.com" },
]
description = "Constraint Grammar stream handler"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
	"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TinoDidriksen/cg-python"
"Bug Tracker" = "https://github.com/TinoDidriksen/cg-python/issues"
